Add dictionary words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,9 @@
     },
     "[ruby]": {
         "editor.defaultFormatter": "jnbt.vscode-rufo"
-    }
+    },
+    "cSpell.words": [
+        "csrf",
+        "signup"
+    ]
 }
