Add unmount to dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "editor.defaultFormatter": "jnbt.vscode-rufo"
     },
     "cSpell.words": [
+        "Unmount",
         "csrf",
         "matchmake",
         "signup"
