Massive cleanup and refactoring
After running eslint on everything, I learned a couple of things:
- You aren't supposed to use typescript namespaces anymore. ES6 modules
are supposed to replace them.
- Lots of small things
- Removed all usages of JSX.Element except for component return values.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
     "cSpell.words": [
         "Unmount",
         "actioncable",
+        "activestorage",
         "csrf",
         "matchmake",
         "signup"
