--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
     },
     "cSpell.words": [
         "Unmount",
+        "Uploader",
         "actioncable",
         "activestorage",
         "csrf",
