--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
-image: 'ruby:2.7'
-
-# Pick zero or more services to be used on all builds.
-# Only needed when using a docker container to run your tests in.
-# Check out: http://docs.gitlab.com/ce/ci/docker/using_docker_images.html#what-is-a-service
-services:
-    - postgres:12
+default:
+    image: 'ruby:2.7'
+    services:
+        - postgres:12
+    # Cache gems in between builds
+    cache:
+        paths:
+            - vendor/ruby
 
 variables:
     # Configured in database.yml
@@ -12,11 +13,6 @@ variables:
     POSTGRES_USER: hunt-console
     POSTGRES_PASSWORD: runner-password
     POSTGRES_HOST_AUTH_METHOD: trust # Allows access without password
-
-# Cache gems in between builds
-cache:
-    paths:
-        - vendor/ruby
 
 # This is a basic example for a gem or script which doesn't use
 # services such as redis or postgres
