Fix GitLab CI config
Never tested the config when I changed it, so obviously it was wrong.

The --format option to RSpec has to be just before the --out file to
which it applied, so I have reversed the argument orderings.

Additionally, I had the wrong argument of --output when it should have
been --out.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ rspec:
         TEST_OUTPUT_FILE: rspec.xml
     script:
         - bundle exec rails db:create db:migrate RAILS_ENV=test
-        - bundle exec rspec --output ${TEST_OUTPUT_FILE} --format RspecJunitFormatter
+        - bundle exec rspec --format RspecJunitFormatter --out ${TEST_OUTPUT_FILE}
     artifacts:
         reports:
             junit: ${TEST_OUTPUT_FILE}
