Add RSpec launch config for only failed
A new RSpec launch configuration has been created in VSCode which only
launches tests for those which failed previously.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,13 @@
       "request": "launch",
       "program": "${workspaceFolder}/bin/rspec",
       "args": ["-I", "${workspaceFolder}"]
+    },
+    {
+      "name": "Rspec - only failed",
+      "type": "Ruby",
+      "request": "launch",
+      "program": "${workspaceRoot}/bin/rspec",
+      "args": ["-I", "${workspaceFolder}", "--only-failures"]
     }
   ]
 }
